add google calendar project logic and some mockito and soft tests